// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remark-Markdown Web Component renders basic component 1`] = `
<remark-markdown>
  Mark {}
  <div />
  Mark {}
</remark-markdown>
`;

exports[`Remark-Markdown Web Component renders basic component 2`] = `
<div>
</div>
`;

exports[`Remark-Markdown Web Component renders component and uses provided plugins 1`] = `
<remark-markdown>
  Mark {
    Symbol(): true,
  }
  <script
    slot="content"
    type="text/markdown"
  >
    Mark {}
    
          # Hello world!

          This is a test of inlined markdown!
          
    Mark {}
  </script>
  Mark {
    Symbol(): true,
  }
  Mark {}
  <div>
    Mark {}
    <h1>
      Mark {}
      Hello world!
      Mark {}
    </h1>
    

    <p>
      Mark {}
      This is a test of inlined markdown!
      Mark {}
    </p>
    Mark {}
  </div>
  Mark {}
</remark-markdown>
`;

exports[`Remark-Markdown Web Component renders component and uses provided plugins 2`] = `
<script slot="content"
        type="text/markdown"
>
  # Hello world!

          This is a test of inlined markdown!
</script>
<div>
  <h1>
    Hello world!
  </h1>
  <p>
    This is a test of inlined markdown!
  </p>
</div>
`;

exports[`Remark-Markdown Web Component renders component with \`src\` parameter 1`] = `
<remark-markdown
  src="https://raw.github.com/adamschwartz/github-markdown-kitchen-sink/master/README.md"
>
  Mark {}
  <h1>
    Mark {}
    Test
    Mark {}
  </h1>
  Mark {}
</remark-markdown>
`;

exports[`Remark-Markdown Web Component renders component with \`src\` parameter 2`] = `
<h1>
  Test
</h1>
`;

exports[`Remark-Markdown Web Component renders component with inlined Markdown 1`] = `
<remark-markdown>
  Mark {
    Symbol(): true,
  }
  <script
    slot="content"
    type="text/markdown"
  >
    Mark {}
    
          # Hello world!

          This is a test of inlined markdown!
          
    Mark {}
  </script>
  Mark {
    Symbol(): true,
  }
  Mark {}
  <div>
    Mark {}
    <h1>
      Mark {}
      Hello world!
      Mark {}
    </h1>
    

    <p>
      Mark {}
      This is a test of inlined markdown!
      Mark {}
    </p>
    Mark {}
  </div>
  Mark {}
</remark-markdown>
`;

exports[`Remark-Markdown Web Component renders component with inlined Markdown 2`] = `
<script slot="content"
        type="text/markdown"
>
  # Hello world!

          This is a test of inlined markdown!
</script>
<div>
  <h1>
    Hello world!
  </h1>
  <p>
    This is a test of inlined markdown!
  </p>
</div>
`;

exports[`Remark-Markdown Web Component renders empty document if inline script does not contain content 1`] = `
<remark-markdown>
  Mark {
    Symbol(): true,
  }
  <script
    slot="content"
    type="text/markdown"
  />
  Mark {
    Symbol(): true,
  }
  Mark {}
  <div />
  Mark {}
</remark-markdown>
`;

exports[`Remark-Markdown Web Component renders empty document if inline script does not contain content 2`] = `
<script slot="content"
        type="text/markdown"
>
</script>
<div>
</div>
`;
